# nation-game

./: .envrc  .gitignore  Dockerfile  main.py  nation_game.py  pyproject.toml  shell.nix  sim_thread.py  todo.md  war_sim.py
assets/: nation-game.json  players.json  world.json
assets/templates/: world-w-natives.json
nation_game/: .nation_game.py.swo  .nation_game.py.swp  .sis_recharge_energy.py.swp  .world.py.swp  Dockerfile  bot.py  conf.py  emoji_utils.py  log.txt  main.py  nation_game.py  paths.py  register.py  save_game_sys.py  sim_occupation_production.py  sim_thread.py  sis_recharge_energy.py  todo.md  utils.py  war_sim.py  world.py  ù
nation_game/assets/: emojis.json  players.json
nation_game/assets/cache/: nation-info-att
nation_game/assets/game-data/: players.json  world.json
nation_game/assets/templates/: world.json
nation_game/data/assets/assets/: players.json  world.json
nation_game/data/assets/test/: 2-vs-1.json
nation_game/data/cache/: nation-info-att
nation_game/data/game-data/: players.json  players.pickle  world.pickle
nation_game/run/: run.bat  run.sh
nation_game/todo/: etnie.md  main.md
vinted_bot/: MiniCPM_Llama3_V_2_5_selenium-old.py  MiniCPM_Llama3_V_2_5_selenium.py  cmd-prompt  conv.py  mistral_selenium.py  selenium_cmds.py  telegram.main.py  test_extract_product_img.py  tmp
vinted_bot/examples/: conversationbot.py
